--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "npm start server.js",
+    "build": "echo 'Building...' && mkdir -p build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
