--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm start server.js",
+    "start": "npm start",
     "build": "echo 'Building...' && mkdir -p build"
   },
   "keywords": [],
